[package]
name = "rgrok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
rand = "*"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
axum = { version = "0.7.5", features = ["ws"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
nanoid = "0.4.0"
redis = "0.25.4"
